tp2/parseur-K.output
Terminals unused in grammar

   LEFT
   RIGHT


État 31conflits: 8 décalage/réduction


Grammaire

    0 $accept: Prg $end

    1 Prg: Stm
    2    | Stm Prg
    3    | LB Prg RB

    4 Stm: INT ID SEMICOLON
    5    | ID ASSIGN Exp SEMICOLON
    6    | INT ID Sec SEMICOLON
    7    | IF LP Exp RP LB Prg RB ELSE LB Prg RB
    8    | IF LP Exp RP Stm ELSE Stm
    9    | WHILE LP Exp RP LB Prg RB
   10    | VOID SEMICOLON
   11    | SEMICOLON

   12 Sec: COMMA ID Sec
   13    | COMMA ID

   14 Exp: Exp ADD Exp
   15    | Exp SUB Exp
   16    | Exp MUL Exp
   17    | Exp AND Exp
   18    | Exp OR Exp
   19    | NOT Exp
   20    | Exp EQ Exp
   21    | Exp LT Exp
   22    | Exp LE Exp
   23    | LP Exp RP
   24    | NUM
   25    | ID
   26    | ID LP Exp RP
   27    | VOID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUM (258) 24
ID (259) 4 5 6 12 13 25 26
ADD (260) 14
SUB (261) 15
MUL (262) 16
AND (263) 17
OR (264) 18
NOT (265) 19
EQ (266) 20
LT (267) 21
LE (268) 22
LEFT (269)
RIGHT (270)
INT (271) 4 6
VOID (272) 10 27
LB (273) 3 7 9
RB (274) 3 7 9
LP (275) 7 8 9 23 26
RP (276) 7 8 9 23 26
SEMICOLON (277) 4 5 6 10 11
COMMA (278) 12 13
ASSIGN (279) 5
IF (280) 7 8
ELSE (281) 7 8
WHILE (282) 9


Non-terminaux, suivis des règles où ils apparaissent

$accept (28)
    à gauche: 0
Prg (29)
    à gauche: 1 2 3, à droite: 0 2 3 7 9
Stm (30)
    à gauche: 4 5 6 7 8 9 10 11, à droite: 1 2 8
Sec (31)
    à gauche: 12 13, à droite: 6 12
Exp (32)
    à gauche: 14 15 16 17 18 19 20 21 22 23 24 25 26 27, à droite:
    5 7 8 9 14 15 16 17 18 19 20 21 22 23 26


état 0

    0 $accept: . Prg $end

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Prg  aller à l'état 8
    Stm  aller à l'état 9


état 1

    5 Stm: ID . ASSIGN Exp SEMICOLON

    ASSIGN  décalage et aller à l'état 10


état 2

    4 Stm: INT . ID SEMICOLON
    6    | INT . ID Sec SEMICOLON

    ID  décalage et aller à l'état 11


état 3

   10 Stm: VOID . SEMICOLON

    SEMICOLON  décalage et aller à l'état 12


état 4

    3 Prg: LB . Prg RB

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Prg  aller à l'état 13
    Stm  aller à l'état 9


état 5

   11 Stm: SEMICOLON .

    $défaut  réduction par utilisation de la règle 11 (Stm)


état 6

    7 Stm: IF . LP Exp RP LB Prg RB ELSE LB Prg RB
    8    | IF . LP Exp RP Stm ELSE Stm

    LP  décalage et aller à l'état 14


état 7

    9 Stm: WHILE . LP Exp RP LB Prg RB

    LP  décalage et aller à l'état 15


état 8

    0 $accept: Prg . $end

    $end  décalage et aller à l'état 16


état 9

    1 Prg: Stm .
    2    | Stm . Prg

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 1 (Prg)

    Prg  aller à l'état 17
    Stm  aller à l'état 9


état 10

    5 Stm: ID ASSIGN . Exp SEMICOLON

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 23


état 11

    4 Stm: INT ID . SEMICOLON
    6    | INT ID . Sec SEMICOLON

    SEMICOLON  décalage et aller à l'état 24
    COMMA      décalage et aller à l'état 25

    Sec  aller à l'état 26


état 12

   10 Stm: VOID SEMICOLON .

    $défaut  réduction par utilisation de la règle 10 (Stm)


état 13

    3 Prg: LB Prg . RB

    RB  décalage et aller à l'état 27


état 14

    7 Stm: IF LP . Exp RP LB Prg RB ELSE LB Prg RB
    8    | IF LP . Exp RP Stm ELSE Stm

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 28


état 15

    9 Stm: WHILE LP . Exp RP LB Prg RB

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 29


état 16

    0 $accept: Prg $end .

    $défaut  accepter


état 17

    2 Prg: Stm Prg .

    $défaut  réduction par utilisation de la règle 2 (Prg)


état 18

   24 Exp: NUM .

    $défaut  réduction par utilisation de la règle 24 (Exp)


état 19

   25 Exp: ID .
   26    | ID . LP Exp RP

    LP  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 25 (Exp)


état 20

   19 Exp: NOT . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 31


état 21

   27 Exp: VOID .

    $défaut  réduction par utilisation de la règle 27 (Exp)


état 22

   23 Exp: LP . Exp RP

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 32


état 23

    5 Stm: ID ASSIGN Exp . SEMICOLON
   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    ADD        décalage et aller à l'état 33
    SUB        décalage et aller à l'état 34
    MUL        décalage et aller à l'état 35
    AND        décalage et aller à l'état 36
    OR         décalage et aller à l'état 37
    EQ         décalage et aller à l'état 38
    LT         décalage et aller à l'état 39
    LE         décalage et aller à l'état 40
    SEMICOLON  décalage et aller à l'état 41


état 24

    4 Stm: INT ID SEMICOLON .

    $défaut  réduction par utilisation de la règle 4 (Stm)


état 25

   12 Sec: COMMA . ID Sec
   13    | COMMA . ID

    ID  décalage et aller à l'état 42


état 26

    6 Stm: INT ID Sec . SEMICOLON

    SEMICOLON  décalage et aller à l'état 43


état 27

    3 Prg: LB Prg RB .

    $défaut  réduction par utilisation de la règle 3 (Prg)


état 28

    7 Stm: IF LP Exp . RP LB Prg RB ELSE LB Prg RB
    8    | IF LP Exp . RP Stm ELSE Stm
   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    ADD  décalage et aller à l'état 33
    SUB  décalage et aller à l'état 34
    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40
    RP   décalage et aller à l'état 44


état 29

    9 Stm: WHILE LP Exp . RP LB Prg RB
   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    ADD  décalage et aller à l'état 33
    SUB  décalage et aller à l'état 34
    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40
    RP   décalage et aller à l'état 45


état 30

   26 Exp: ID LP . Exp RP

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 46


état 31

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   19    | NOT Exp .
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    ADD  décalage et aller à l'état 33
    SUB  décalage et aller à l'état 34
    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40

    ADD      [réduction par utilisation de la règle 19 (Exp)]
    SUB      [réduction par utilisation de la règle 19 (Exp)]
    MUL      [réduction par utilisation de la règle 19 (Exp)]
    AND      [réduction par utilisation de la règle 19 (Exp)]
    OR       [réduction par utilisation de la règle 19 (Exp)]
    EQ       [réduction par utilisation de la règle 19 (Exp)]
    LT       [réduction par utilisation de la règle 19 (Exp)]
    LE       [réduction par utilisation de la règle 19 (Exp)]
    $défaut  réduction par utilisation de la règle 19 (Exp)


état 32

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp
   23    | LP Exp . RP

    ADD  décalage et aller à l'état 33
    SUB  décalage et aller à l'état 34
    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40
    RP   décalage et aller à l'état 47


état 33

   14 Exp: Exp ADD . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 48


état 34

   15 Exp: Exp SUB . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 49


état 35

   16 Exp: Exp MUL . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 50


état 36

   17 Exp: Exp AND . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 51


état 37

   18 Exp: Exp OR . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 52


état 38

   20 Exp: Exp EQ . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 53


état 39

   21 Exp: Exp LT . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 54


état 40

   22 Exp: Exp LE . Exp

    NUM   décalage et aller à l'état 18
    ID    décalage et aller à l'état 19
    NOT   décalage et aller à l'état 20
    VOID  décalage et aller à l'état 21
    LP    décalage et aller à l'état 22

    Exp  aller à l'état 55


état 41

    5 Stm: ID ASSIGN Exp SEMICOLON .

    $défaut  réduction par utilisation de la règle 5 (Stm)


état 42

   12 Sec: COMMA ID . Sec
   13    | COMMA ID .

    COMMA  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 13 (Sec)

    Sec  aller à l'état 56


état 43

    6 Stm: INT ID Sec SEMICOLON .

    $défaut  réduction par utilisation de la règle 6 (Stm)


état 44

    7 Stm: IF LP Exp RP . LB Prg RB ELSE LB Prg RB
    8    | IF LP Exp RP . Stm ELSE Stm

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 57
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Stm  aller à l'état 58


état 45

    9 Stm: WHILE LP Exp RP . LB Prg RB

    LB  décalage et aller à l'état 59


état 46

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp
   26    | ID LP Exp . RP

    ADD  décalage et aller à l'état 33
    SUB  décalage et aller à l'état 34
    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40
    RP   décalage et aller à l'état 60


état 47

   23 Exp: LP Exp RP .

    $défaut  réduction par utilisation de la règle 23 (Exp)


état 48

   14 Exp: Exp . ADD Exp
   14    | Exp ADD Exp .
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 14 (Exp)


état 49

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   15    | Exp SUB Exp .
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    MUL  décalage et aller à l'état 35
    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 15 (Exp)


état 50

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   16    | Exp MUL Exp .
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    AND  décalage et aller à l'état 36
    OR   décalage et aller à l'état 37
    EQ   décalage et aller à l'état 38
    LT   décalage et aller à l'état 39
    LE   décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 16 (Exp)


état 51

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   17    | Exp AND Exp .
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    EQ  décalage et aller à l'état 38
    LT  décalage et aller à l'état 39
    LE  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 17 (Exp)


état 52

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   18    | Exp OR Exp .
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    EQ  décalage et aller à l'état 38
    LT  décalage et aller à l'état 39
    LE  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 18 (Exp)


état 53

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   20    | Exp EQ Exp .
   21    | Exp . LT Exp
   22    | Exp . LE Exp

    $défaut  réduction par utilisation de la règle 20 (Exp)


état 54

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   21    | Exp LT Exp .
   22    | Exp . LE Exp

    $défaut  réduction par utilisation de la règle 21 (Exp)


état 55

   14 Exp: Exp . ADD Exp
   15    | Exp . SUB Exp
   16    | Exp . MUL Exp
   17    | Exp . AND Exp
   18    | Exp . OR Exp
   20    | Exp . EQ Exp
   21    | Exp . LT Exp
   22    | Exp . LE Exp
   22    | Exp LE Exp .

    $défaut  réduction par utilisation de la règle 22 (Exp)


état 56

   12 Sec: COMMA ID Sec .

    $défaut  réduction par utilisation de la règle 12 (Sec)


état 57

    7 Stm: IF LP Exp RP LB . Prg RB ELSE LB Prg RB

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Prg  aller à l'état 61
    Stm  aller à l'état 9


état 58

    8 Stm: IF LP Exp RP Stm . ELSE Stm

    ELSE  décalage et aller à l'état 62


état 59

    9 Stm: WHILE LP Exp RP LB . Prg RB

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Prg  aller à l'état 63
    Stm  aller à l'état 9


état 60

   26 Exp: ID LP Exp RP .

    $défaut  réduction par utilisation de la règle 26 (Exp)


état 61

    7 Stm: IF LP Exp RP LB Prg . RB ELSE LB Prg RB

    RB  décalage et aller à l'état 64


état 62

    8 Stm: IF LP Exp RP Stm ELSE . Stm

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Stm  aller à l'état 65


état 63

    9 Stm: WHILE LP Exp RP LB Prg . RB

    RB  décalage et aller à l'état 66


état 64

    7 Stm: IF LP Exp RP LB Prg RB . ELSE LB Prg RB

    ELSE  décalage et aller à l'état 67


état 65

    8 Stm: IF LP Exp RP Stm ELSE Stm .

    $défaut  réduction par utilisation de la règle 8 (Stm)


état 66

    9 Stm: WHILE LP Exp RP LB Prg RB .

    $défaut  réduction par utilisation de la règle 9 (Stm)


état 67

    7 Stm: IF LP Exp RP LB Prg RB ELSE . LB Prg RB

    LB  décalage et aller à l'état 68


état 68

    7 Stm: IF LP Exp RP LB Prg RB ELSE LB . Prg RB

    ID         décalage et aller à l'état 1
    INT        décalage et aller à l'état 2
    VOID       décalage et aller à l'état 3
    LB         décalage et aller à l'état 4
    SEMICOLON  décalage et aller à l'état 5
    IF         décalage et aller à l'état 6
    WHILE      décalage et aller à l'état 7

    Prg  aller à l'état 69
    Stm  aller à l'état 9


état 69

    7 Stm: IF LP Exp RP LB Prg RB ELSE LB Prg . RB

    RB  décalage et aller à l'état 70


état 70

    7 Stm: IF LP Exp RP LB Prg RB ELSE LB Prg RB .

    $défaut  réduction par utilisation de la règle 7 (Stm)
